@@ -2,7 +2,7 @@
  * Copyright 2005 Salvatore Sanfilippo <antirez@invece.org>
  * Copyright 2005 Clemens Hintze <c.hintze@gmx.net>
  *
- * $Id: jim.c,v 1.133 2005/03/29 13:38:04 antirez Exp $
+ * $Id: jim.c,v 1.134 2005/03/29 13:43:53 antirez Exp $
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -10879,7 +10879,7 @@ static int Jim_RandCoreCommand(Jim_Interp *interp, int argc,
             Jim_GetWide(interp, argv[2], &max) != JIM_OK)
             return JIM_ERR;
     }
-    len = max-min-1;
+    len = max-min;
     if (len < 0) {
         Jim_SetResultString(interp, "Invalid arguments (max < min)", -1);
         return JIM_ERR;
@@ -11027,7 +11027,7 @@ int Jim_InteractivePrompt(Jim_Interp *interp)
     printf("Welcome to Jim version %d.%d, "
            "Copyright (c) 2005 Salvatore Sanfilippo\n",
            JIM_VERSION / 100, JIM_VERSION % 100);
-    printf("CVS ID: $Id: jim.c,v 1.133 2005/03/29 13:38:04 antirez Exp $\n");
+    printf("CVS ID: $Id: jim.c,v 1.134 2005/03/29 13:43:53 antirez Exp $\n");
     Jim_SetVariableStrWithStr(interp, "jim_interactive", "1");
     while (1) {
         char buf[1024];
